--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:tamayakmusic@gmail.com">tamayakmusic@gmail.com</a></p>
+    <p>Email: <a href="mailto:metamayak@gmail.com">metamayak@gmail.com</a></p>
   </section>
 
   <footer>
