--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
   <section id="music" class="music">
     <h2>Music</h2>
     <p>Listen to the latest release: <strong>Pogito ng Panggao</strong></p>
-    <iframe src="https://music.youtube.com/watch?v=K9KGOj6ZpHs&si=m15tERomR2JMFk0u" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/K9KGOj6ZpHs" frameborder="0" allowfullscreen></iframe>
   </section>
 
   <section id="videos" class="videos">
     <h2>Videos</h2>
-    <iframe src="https://youtu.be/NXO_KFvoI2k" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/NXO_KFvoI2k" frameborder="0" allowfullscreen></iframe>
   </section>
 
   <section id="links" class="links">
