--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
       color: #f5f5f5;
     }
     header {
-      /* The updated header background using your image */
-      background-image: url('image.png'); /* IMPORTANT: Ensure 'image.png' is in the same directory or provide correct path */
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: cover;
+      background: url('header-bg.jpg') no-repeat center center/cover;
       padding: 4rem 2rem;
       text-align: center;
       color: #fff;
@@ -100,19 +96,19 @@
   <section id="music" class="music">
     <h2>Music</h2>
     <p>Listen to the latest release: <strong>Pogito ng Panggao</strong></p>
-    <iframe src="YOUR_YOUTUBE_MUSIC_VIDEO_EMBED_URL" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/K9KGOj6ZpHs" frameborder="0" allowfullscreen></iframe>
   </section>
 
   <section id="videos" class="videos">
     <h2>Videos</h2>
-    <iframe src="YOUR_YOUTUBE_OTHER_VIDEO_EMBED_URL" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/NXO_KFvoI2k" frameborder="0" allowfullscreen></iframe>
   </section>
 
   <section id="links" class="links">
     <h2>Listen & Follow</h2>
-    <a href="YOUR_SPOTIFY_PROFILE_URL" target="_blank">Spotify</a>
+    <a href="https://open.spotify.com/artist/5us6uhWFasdqux65evdTVW" target="_blank">Spotify</a>
     <a href="https://music.apple.com/artist/1807906216" target="_blank">Apple Music</a>
-    <a href="YOUR_YOUTUBE_CHANNEL_URL" target="_blank">YouTube</a>
+    <a href="https://youtube.com/@iTamayak" target="_blank">YouTube</a>
     <a href="https://tiktok.com/@itamayak" target="_blank">TikTok</a>
     <a href="https://facebook.com/itamayak" target="_blank">Facebook</a>
     <a href="https://instagram.com/itamayak" target="_blank">Instagram</a>
@@ -124,7 +120,7 @@
   </section>
 
   <footer>
-    © 2025 Tamayak. All rights reserved.
+    &copy; 2025 Tamayak. All rights reserved.
   </footer>
 </body>
 </html>
