--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -73,6 +72,12 @@
       font-size: 0.9rem;
       color: #888;
     }
+    article {
+      margin-bottom: 3rem;
+    }
+    article h3 {
+      color: #1db954;
+    }
   </style>
 </head>
 <body>
@@ -86,25 +91,138 @@
     <a href="#videos">Videos</a>
     <a href="#links">Links</a>
     <a href="#contact">Contact</a>
-  </nav>
-
-  <section id="about">
+  </nav>  <section id="about">
     <h2>About</h2>
     <p>Tamayak is an independent artist blending R&B, Hip-hop Soul, Emo Trap, and Maranao cultural soundscapes. Born from fusion and feeling, every track is a journey through healing, identity, and modern soul.</p>
-  </section>
-
-  <section id="music" class="music">
+  </section>  <section id="music" class="music">
     <h2>Music</h2>
     <p>Listen to the latest release: <strong>Pogito ng Panggao</strong></p>
-    <iframe src="https://www.youtube.com/embed/K9KGOj6ZpHs" frameborder="0" allowfullscreen></iframe>
-  </section>
+    <iframe src="https://www.youtube.com/embed/K9KGOj6ZpHs" frameborder="0" allowfullscreen></iframe><article id="pogito-ng-panggao">
+  <h3>Pogito ng Panggao</h3>
+  <p>
+    Mga batang Panggao, mga pogi kahit simpleng bihis<br>
+    Tahimik lang pero galaw ay panis<br>
+    Hindi nagyayabang, pero swag pag kumilos<br>
+    Dito sa amin, respeto ay solid, di tinutustos<br><br>
 
-  <section id="videos" class="videos">
+    Minsan may angas, minsan tahimik<br>
+    Pero 'pag tropa ang kasama, automatic<br>
+    Walang plastikan, lahat legit<br>
+    Kapag may laban, buong barangay kakampi<br><br>
+
+    Batang Panggao, mga pogi walang kapantay<br>
+    Lakas ng dating, kahit simpleng dumaan<br>
+    Galaw ng kanto, puso'y dalisay<br>
+    Tropa sa umaga, bayani sa laban<br><br>
+
+    Basketball sa court, kwentuhan sa waiting shed<br>
+    Mga plano sa buhay habang chill sa gilid<br>
+    Kahit walang yaman, may pangarap na tapat<br>
+    At ang ngiti sa mukha, kahit minsan kulang sa ginhawa't sapat<br><br>
+
+    Minsan may angas, minsan tahimik<br>
+    Pero 'pag tropa ang kasama, automatic<br>
+    Walang plastikan, lahat legit<br>
+    Kapag may laban, buong barangay kakampi<br><br>
+
+    Batang Panggao, mga pogi walang kapantay<br>
+    Lakas ng dating, kahit simpleng dumaan<br>
+    Galaw ng kanto, puso'y dalisay<br>
+    Tropa sa umaga, bayani sa laban<br><br>
+
+    Hindi man sikat, pero tunay<br>
+    Sa bawat hakbang, dala ang dangal<br>
+    Kami ang batang Panggao<br>
+    Walang arte, pero astig ang asal!<br><br>
+
+    Mga pogi<br>
+    Papik! Ipo! Opaw! Diyo! Atang!<br>
+    Paypay! Boy Flower! Klin! Mano!<br>
+    Idmong! Iyang! Pressmir! Nader!<br>
+    Pogi! Palo! Lunta! Colon!<br>
+    Kaloy! Makmak! Nati! Lumboe!<br>
+    Sagamak! Orak! Black!<br><br>
+
+    At syempre<br>
+    Ang Pogito ng Panggao, si Tamayaaak!
+  </p>
+</article>
+
+<article id="hindi-mo-alam">
+  <h3>Hindi Mo Alam</h3>
+  <p>
+    Di naman naging tayo, pero bakit gan'to?<br>
+    Bakit parang... tayo pa rin?<br><br>
+
+    Walang tayo, pero bakit gan'to<br>
+    Nasasaktan pa rin kahit wala naman tayo<br>
+    You're not mine, but I still care<br>
+    You're not mine, but it's so unfair<br><br>
+
+    Walang tayo, pero ramdam kita<br>
+    Sa bawat gabi, 'di ko maiwasang maalala ka<br>
+    You're not mine, but it felt so true<br>
+    Walang tayo... pero bakit ikaw pa rin ang gusto ko?<br><br>
+
+    Late night calls turned to silence<br>
+    Puro typing, pero walang send<br>
+    Ikaw ang tanong, pero ako ang 'di sinagot<br>
+    Tayo ang simula, pero ako ang natapos<br><br>
+
+    Gabi-gabing kasama kita sa isip<br>
+    Di mo alam, ako'y laging gising<br>
+    Lahat ng message ko, dinidikit sa panaginip<br>
+    Pero sa totoo, ako lang pala ang naniniwala sa ating dalawa<br><br>
+
+    Ibinuhos ko kahit walang kasiguraduhan<br>
+    Pinili ka kahit alam kong 'di ako ang tahanan<br>
+    It felt like love, kahit walang label<br>
+    It felt like home, kahit ako lang ang nakakaramdam<br><br>
+
+    Walang tayo, pero bakit gan'to<br>
+    Nasasaktan pa rin kahit wala naman tayo<br>
+    You're not mine, but I still care<br>
+    You're not mine, but it's so unfair<br><br>
+
+    Pero ramdam kita<br>
+    Sa bawat gabi, 'di ko maiwasang maalala ka<br>
+    You're not mine, but it felt so true<br>
+    Walang tayo... pero ikaw pa rin ang mundo ko<br><br>
+
+    Nasanay sa "good morning," ngayon wala na<br>
+    Sanay sa "kumain ka na ba?" pero di ka na kumakaway<br>
+    You said we're better off this way<br>
+    But why does it hurt more every day?<br><br>
+
+    Lahat ng plano ko, kasama ka<br>
+    Pero lahat ng iniwan mo, tanong pa rin sa alaala<br>
+    Kung mahal mo, bakit 'di lumaban?<br>
+    Kung tayo'y masaya, bakit 'di mo pinaglaban?<br><br>
+
+    Kung babalik ka<br>
+    'Di na ako aasa, pero lilingon pa rin<br>
+    Kahit walang tayo…<br>
+    Ako pa rin ang nagmamahal nang tahimik<br><br>
+
+    Walang tayo, pero bakit gan'to<br>
+    Nasasaktan pa rin kahit wala naman tayo<br>
+    You're not mine, but I still care<br>
+    You're not mine, but it's so unfair<br><br>
+
+    Walang tayo, pero ramdam kita<br>
+    Sa bawat gabi, 'di ko maiwasang maalala ka<br>
+    You're not mine, but it felt so true<br>
+    Walang tayo... pero ikaw pa rin ang mundo ko<br><br>
+
+    Walang tayo<br>
+    Pero ako lang ang nagmahal nang totoo.
+  </p>
+</article>
+
+  </section>  <section id="videos" class="videos">
     <h2>Videos</h2>
     <iframe src="https://www.youtube.com/embed/NXO_KFvoI2k" frameborder="0" allowfullscreen></iframe>
-  </section>
-
-  <section id="links" class="links">
+  </section>  <section id="links" class="links">
     <h2>Listen & Follow</h2>
     <a href="https://open.spotify.com/artist/5us6uhWFasdqux65evdTVW" target="_blank">Spotify</a>
     <a href="https://music.apple.com/artist/1807906216" target="_blank">Apple Music</a>
@@ -112,14 +230,10 @@
     <a href="https://tiktok.com/@itamayak" target="_blank">TikTok</a>
     <a href="https://facebook.com/itamayak" target="_blank">Facebook</a>
     <a href="https://instagram.com/itamayak" target="_blank">Instagram</a>
-  </section>
-
-  <section id="contact">
+  </section>  <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:metamayak@gmail.com">metamayak@gmail.com</a></p>
-  </section>
-
-  <footer>
+  </section>  <footer>
     &copy; 2025 Tamayak. All rights reserved.
   </footer>
 </body>
