--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@
       color: #1db954;
     }
   </style>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Tamayak is an independent artist blending R&B, Hip-hop Soul, Emo Trap, and Maranao culture into music rooted in identity and healing." />
+  <title>Tamayak | Hip-hop Soul from Mindanao</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-  <header>
-    <h1 class="neon">TAMAYAK</h1>
-    <p>Hip-hop Soul from the Heart of Mindanao</p>
-  </header>
   <nav>
     <a href="#about">About</a>
     <a href="#music">Music</a>
