--- a/index.html
+++ b/index.html
@@ -1,116 +1,200 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Tamayak is an independent artist blending R&B, Hip-hop Soul, Emo Trap, and Maranao culture into music rooted in identity and healing." />
   <title>Tamayak | Hip-hop Soul from Mindanao</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-  <style>
-    header {
-      background: url('header-bg.jpg') no-repeat center center/cover;
-      padding: 4rem 2rem;
-      text-align: center;
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #000;
       color: #fff;
     }
-  </style>
-</head>
+
+    @keyframes neonGlow {
+      0% { color: #ff0000; text-shadow: 0 0 5px #ff0000, 0 0 20px #ff0000; }
+      33% { color: #00ff00; text-shadow: 0 0 5px #00ff00, 0 0 20px #00ff00; }
+      66% { color: #0000ff; text-shadow: 0 0 5px #0000ff, 0 0 20px #0000ff; }
+      100% { color: #ff0000; text-shadow: 0 0 5px #ff0000, 0 0 20px #ff0000; }
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    header {
+      background: linear-gradient(-45deg, #ff0000, #00ff00, #0000ff, #ff0000);
+      background-size: 600% 600%;
+      animation: gradientShift 15s ease infinite;
+      padding: 4rem 2rem;
+      text-align: center;
+    }
+
+    .neon {
+      font-size: 3rem;
+      font-weight: 600;
+      animation: neonGlow 5s infinite alternate;
+      position: relative;
+    }
+
+    .neon::before {
+      content: 'TAMAYAK';
+      position: absolute;
+      top: 0;
+      left: 2px;
+      color: #0ff;
+      opacity: 0.5;
+      z-index: -1;
+      animation: glitch 1s infinite linear alternate-reverse;
+    }
+
+    @keyframes glitch {
+      0% { transform: translate(0); }
+      20% { transform: translate(-2px, 2px); }
+      40% { transform: translate(2px, -2px); }
+      60% { transform: translate(-1px, 1px); }
+      80% { transform: translate(1px, -1px); }
+      100% { transform: translate(0); }
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      background: #111;
+      padding: 1rem;
+    }
+
+    nav a {
+      color: #0ff;
+      text-decoration: none;
+      font-weight: bold;
+      position: relative;
+      transition: all 0.2s ease;
+    }
+
+    nav a:hover {
+      text-shadow: 0 0 5px #0ff, 0 0 10px #0ff, 0 0 15px #0ff;
+    }
+
+    nav a::after {
+      content: attr(data-glitch);
+      position: absolute;
+      left: 2px;
+      top: 0;
+      color: #f0f;
+      background: transparent;
+      clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
+      opacity: 0.6;
+      transform: translate(2px, 0);
+    }
+
+    nav a:hover::after {
+      animation: glitch 0.3s infinite;
+    }
+
+    section {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    iframe {
+      width: 100%;
+      max-width: 600px;
+      height: 315px;
+      display: block;
+      margin: 1rem auto;
+    }
+
+    footer {
+      background: #111;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+
+    a {
+      color: #0ff;
+    }
+
+    #loading-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+
+    #loading-screen h1 {
+      color: #0ff;
+      font-size: 2rem;
+      animation: neonGlow 2s infinite alternate;
+    }
+  </style></head>
 <body>
-  <header>
+  <div id="loading-screen">
+    <h1>Loading Tamayak...</h1>
+  </div>  <header>
     <h1 class="neon">TAMAYAK</h1>
     <p>Hip-hop Soul from the Heart of Mindanao</p>
-  </header>
-  <nav>
-    <a href="#about">About</a>
-    <a href="#music">Music</a>
-    <a href="#videos">Videos</a>
-    <a href="#links">Links</a>
-    <a href="#contact">Contact</a>
-  </nav>  
-  <section id="about">
+  </header>  <nav>
+    <a href="#about" data-glitch="About">About</a>
+    <a href="#music" data-glitch="Music">Music</a>
+    <a href="#videos" data-glitch="Videos">Videos</a>
+    <a href="#links" data-glitch="Links">Links</a>
+    <a href="#contact" data-glitch="Contact">Contact</a>
+  </nav>  <section id="about">
     <h2>About</h2>
     <p>Tamayak is an independent artist blending R&B, Hip-hop Soul, Emo Trap, and Maranao cultural soundscapes. Born from fusion and feeling, every track is a journey through healing, identity, and modern soul.</p>
-  </section>  
-  <section id="music" class="music">
+  </section>  <section id="music" class="music">
     <h2>Music</h2>
     <p>Listen to the latest release: <strong>Pogito ng Panggao</strong></p>
-    <iframe src="https://www.youtube.com/embed/K9KGOj6ZpHs" frameborder="0" allowfullscreen></iframe>
-    <article id="pogito-ng-panggao">
-      <h3>Pogito ng Panggao</h3>
-      <p>
-        Mga batang Panggao, mga pogi kahit simpleng bihis<br>
-        Tahimik lang pero galaw ay panis<br>
-        Hindi nagyayabang, pero swag pag kumilos<br>
-        Dito sa amin, respeto ay solid, di tinutustos<br><br>
-
-        Minsan may angas, minsan tahimik<br>
-        Pero 'pag tropa ang kasama, automatic<br>
-        Walang plastikan, lahat legit<br>
-        Kapag may laban, buong barangay kakampi<br><br>
-
-        Batang Panggao, mga pogi walang kapantay<br>
-        Lakas ng dating, kahit simpleng dumaan<br>
-        Galaw ng kanto, puso'y dalisay<br>
-        Tropa sa umaga, bayani sa laban<br><br>
-
-        Basketball sa court, kwentuhan sa waiting shed<br>
-        Mga plano sa buhay habang chill sa gilid<br>
-        Kahit walang yaman, may pangarap na tapat<br>
-        At ang ngiti sa mukha, kahit minsan kulang sa ginhawa't sapat<br><br>
-
-        Minsan may angas, minsan tahimik<br>
-        Pero 'pag tropa ang kasama, automatic<br>
-        Walang plastikan, lahat legit<br>
-        Kapag may laban, buong barangay kakampi<br><br>
-
-        Batang Panggao, mga pogi walang kapantay<br>
-        Lakas ng dating, kahit simpleng dumaan<br>
-        Galaw ng kanto, puso'y dalisay<br>
-        Tropa sa umaga, bayani sa laban<br><br>
-
-        Hindi man sikat, pero tunay<br>
-        Sa bawat hakbang, dala ang dangal<br>
-        Kami ang batang Panggao<br>
-        Walang arte, pero astig ang asal!<br><br>
-
-        Mga pogi<br>
-        Papik! Ipo! Opaw! Diyo! Atang!<br>
-        Paypay! Boy Flower! Klin! Mano!<br>
-        Idmong! Iyang! Pressmir! Nader!<br>
-        Pogi! Palo! Lunta! Colon!<br>
-        Kaloy! Makmak! Nati! Lumboe!<br>
-        Sagamak! Orak! Black!<br><br>
-
-        At syempre<br>
-        Ang Pogito ng Panggao, si Tamayaaak!
-      </p>
-    </article>
-  </section>  
-
-  <section id="videos" class="videos">
+    <iframe src="https://www.youtube.com/embed/K9KGOj6ZpHs" title="Pogito ng Panggao" frameborder="0" allowfullscreen></iframe>
+    <!-- Lyrics or content here -->
+  </section>  <section id="videos" class="videos">
     <h2>Videos</h2>
-    <iframe src="https://www.youtube.com/embed/NXO_KFvoI2k" frameborder="0" allowfullscreen></iframe>
-  </section>  
-
-  <section id="links" class="links">
+    <iframe src="https://www.youtube.com/embed/NXO_KFvoI2k" title="Tamayak video" frameborder="0" allowfullscreen></iframe>
+  </section>  <section id="links" class="links">
     <h2>Listen & Follow</h2>
-    <a href="https://open.spotify.com/artist/5us6uhWFasdqux65evdTVW" target="_blank">Spotify</a>
-    <a href="https://music.apple.com/artist/1807906216" target="_blank">Apple Music</a>
-    <a href="https://youtube.com/@iTamayak" target="_blank">YouTube</a>
-    <a href="https://tiktok.com/@itamayak" target="_blank">TikTok</a>
-    <a href="https://facebook.com/itamayak" target="_blank">Facebook</a>
+    <a href="https://open.spotify.com/artist/5us6uhWFasdqux65evdTVW" target="_blank">Spotify</a><br>
+    <a href="https://music.apple.com/artist/1807906216" target="_blank">Apple Music</a><br>
+    <a href="https://youtube.com/@iTamayak" target="_blank">YouTube</a><br>
+    <a href="https://tiktok.com/@itamayak" target="_blank">TikTok</a><br>
+    <a href="https://facebook.com/itamayak" target="_blank">Facebook</a><br>
     <a href="https://instagram.com/itamayak" target="_blank">Instagram</a>
-  </section>  
-
-  <section id="contact">
+  </section>  <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:metamayak@gmail.com">metamayak@gmail.com</a></p>
-  </section>  
-
-  <footer>
+  </section>  <footer>
     &copy; 2025 Tamayak. All rights reserved.
-  </footer>
-</body>
+  </footer><audio id="hoverSound" src="hover.mp3" preload="auto"></audio>
+
+  <script>
+    window.addEventListener('load', () => {
+      const loader = document.getElementById('loading-screen');
+      loader.style.display = 'none';
+    });
+
+    const hoverSound = document.getElementById('hoverSound');
+    document.querySelectorAll('nav a').forEach(link => {
+      link.addEventListener('mouseenter', () => {
+        hoverSound.currentTime = 0;
+        hoverSound.play();
+      });
+    });
+  </script></body>
 </html>
