--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Tamayak is an independent artist blending R&B, Hip-hop Soul, Emo Trap, and Maranao culture into music rooted in identity and healing." />
   <title>Tamayak | Hip-hop Soul from Mindanao</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
   <div id="loading-screen">
@@ -55,58 +54,5 @@
   </footer>
   <audio id="hoverSound" src="hover.mp3" preload="auto"></audio>
   <script src="script.js"></script>
-</body>
-</html>
-<script src="script.js"></script>
-
-  <!-- Remove accessibility widget -->
-  <script>
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        const selectors = [
-          'iframe[title*="accessibility"]',
-          'iframe[src*="userway"]',
-          'iframe[src*="equalweb"]',
-          'iframe[src*="accessiBe"]',
-          '[id*="userway"]',
-          '[class*="userway"]',
-          '[class*="accessibility"]',
-          '[id*="accessibility"]',
-          '[aria-label*="accessibility"]',
-          '[style*="z-index"][style*="right"]',
-          '.widget-wrapper',
-          '#userwayAccessibilityIcon'
-        ];
-        selectors.forEach(sel => {
-          document.querySelectorAll(sel).forEach(el => el.remove());
-        });
-      }, 1000); // Wait 1 second to let widget load
-    });
-  <script src="script.js"></script>
-
-  <!-- Remove accessibility widget -->
-  <script>
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        const selectors = [
-          'iframe[title*="accessibility"]',
-          'iframe[src*="userway"]',
-          'iframe[src*="equalweb"]',
-          'iframe[src*="accessiBe"]',
-          '[id*="userway"]',
-          '[class*="userway"]',
-          '[class*="accessibility"]',
-          '[id*="accessibility"]',
-          '[aria-label*="accessibility"]',
-          '[style*="z-index"][style*="right"]',
-          '.widget-wrapper',
-          '#userwayAccessibilityIcon'
-        ];
-        selectors.forEach(sel => {
-          document.querySelectorAll(sel).forEach(el => el.remove());
-        });
-      }, 1000); // Wait 1 second to let widget load
-    });
-  </script>
 </body>
 </html>
